--- a/pages/index.html
+++ b/pages/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "MADness"
-description: "MAD for Jekyll!!!"
+title: "Ramun"
+description: "Una pagina para mi!!!"
 header-img: "assets/owner/hero/home-bg.jpg"
 permalink: ./index.html
 ---
