--- a/pages/index.html
+++ b/pages/index.html
@@ -51,7 +51,7 @@ permalink: ./index.html
 
         <div class="col-md-left-cntct">
 
-<h2>Welcome to MADness!</h2>
+<h2>Gracias por visitar mi pagina!</h2>
      
 <h3>'MAD4Jekyll' is a theme for <a href="https://github.com/jekyll/">Jekyll</a>.</h3>
 <br>
